--- a/src/modules/AiVideoContentSection/component/VideoMarqueeRow/VideoMarqueeRow.module.scss
+++ b/src/modules/AiVideoContentSection/component/VideoMarqueeRow/VideoMarqueeRow.module.scss
@@ -1,4 +1,5 @@
 @use '@/styles/_variables.scss' as *;
+@use '@/styles/_mixins.scss' as *;
 
 .video-marquee-row {
   position: relative;
@@ -62,4 +63,15 @@
       10px -10px,
       -10px 0px;
   }
+}
+
+// Responsive: shrink video tiles so 3 rows fit
+@include vp-1024 {
+  .video-marquee-row__video { width: 340px; min-width: 340px; height: 160px; min-height: 160px; }
+}
+@include vp-768 {
+  .video-marquee-row__video { width: 300px; min-width: 300px; height: 140px; min-height: 140px; }
+}
+@include vp-360 {
+  .video-marquee-row__video { width: 260px; min-width: 260px; height: 120px; min-height: 120px; }
 }
